# data-vent

./: .gitignore  CLAUDE.md  Dockerfile  README.md  blocks.py  deploy.py  ecs_block.py  prefect.yaml  pyproject.toml
.ci/: data-vent.yaml  data-vent.yml
.github/workflows/: annotations-harvest.yaml  build-image.yaml  data-catalog.yaml  data-stats.yaml  deploy_flows.yaml  metadata-harvest.yaml
data_vent/: cli.py  config.py  exceptions.py  flow.py  orchestration.py  tasks.py  test_configs.py
data_vent/cli/: cli.py
data_vent/metadata/: __init__.py  annotations.py  cli.py  fetcher.py  util.py  utils.py
data_vent/pipelines/: notifications.py
data_vent/processor/: __init__.py  advanced_qaqc.py  checker.py  pipeline.py  utils.py
data_vent/producer/: __init__.py  models.py
data_vent/profilers/: profilers.py
data_vent/scripts/: purge_s3_by_key.py  reconfig.py
data_vent/settings/: __init__.py  main.py  models.py
data_vent/stats/: __init__.py  cli.py
data_vent/test_yaml/: CE01ISSM-MFD35-01-VEL3DD000-telemetered-vel3d_cd_dcl_velocity_data.yaml
data_vent/utils/: compute.py  conn.py  core.py  encoders.py  parser.py  validate.py
deployments/: run-stream-ingest-deployment.yaml  stream-ingest-deployment.yaml
flow_configs/CE01ISSM-MFD35-01-VEL3DD000/: CE01ISSM-MFD35-01-VEL3DD000-recovered_host-vel3d_cd_dcl_velocity_data_recovered.yaml  CE01ISSM-MFD35-01-VEL3DD000-telemetered-vel3d_cd_dcl_velocity_data.yaml
flow_configs/CE01ISSM-MFD35-02-PRESFA000/: CE01ISSM-MFD35-02-PRESFA000-recovered_host-presf_abc_dcl_tide_measurement_recovered.yaml  CE01ISSM-MFD35-02-PRESFA000-recovered_host-presf_abc_dcl_wave_burst_recovered.yaml  CE01ISSM-MFD35-02-PRESFA000-recovered_inst-presf_abc_tide_measurement_recovered.yaml  CE01ISSM-MFD35-02-PRESFA000-telemetered-presf_abc_dcl_tide_measurement.yaml  (+1 more)
(+693 files in other folders)
